@@ -7,6 +7,7 @@ version <next>:
 - replaygain data export
 - LucasArts SMUSH SANM video decoder
 - LucasArts SMUSH VIMA audio decoder (ADPCM)
+- LucasArts SMUSH demuxer
 
 
 version 10:
